objects/CRM_Mortgage_Fees_Data__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_DESRecordActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DESRecordActiveFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Doc_Header_Id__c</fullName>
        <label>Doc Header Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Fees_Id__c</fullName>
        <label>Fees Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage Application</label>
        <referenceTo>CRM_Mortgage_Application_Data__c</referenceTo>
        <relationshipLabel>Mortgage Fees</relationshipLabel>
        <relationshipName>Mortgage_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mortgage Fees</label>
    <nameField>
        <displayFormat>Fee-{000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>